Bugzilla #1508, new feature: click on magnifying glass beside referral to see more details.